Weight gradient tool auto normalizes over locked groups #107920

Closed
opened 2023-05-14 03:30:07 +02:00 by Daniel Salazar · 5 comments
Member

System Information
Operating system: Linux-5.19.0-41-generic-x86_64-with-glibc2.36 64 Bits, X11 UI
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 530.41.03

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-05-13 23:11, hash: 018f3dbf8533

Short description of error
When gradient painting over a group, the auto normalization affects other groups that are locked.

Exact steps for others to reproduce the error
Weight Gradient Normalize.blend

  1. Notice the weighing of the Bone 1 vertex group.
    image
  2. Select the Bone 2 vertex group.
  3. Drag over the model to gradient paint.
    image
  4. Select Bone 1 again.
    Bone 1 has been auto normalized even when it's locked
    image
**System Information** Operating system: Linux-5.19.0-41-generic-x86_64-with-glibc2.36 64 Bits, X11 UI Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 530.41.03 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-05-13 23:11, hash: `018f3dbf8533` **Short description of error** When gradient painting over a group, the auto normalization affects other groups that are locked. **Exact steps for others to reproduce the error** [Weight Gradient Normalize.blend](/attachments/2acc5e58-f594-487f-be85-c3aae07eb0e8) 1. Notice the weighing of the **Bone 1** vertex group. ![image](/attachments/7812e1ae-0d3a-4e96-9776-2a02183b7661) 2. Select the **Bone 2** vertex group. 3. Drag over the model to gradient paint. ![image](/attachments/f6336a44-c928-44d8-9b68-da5b3334808b) 4. Select **Bone 1** again. **Bone 1** has been auto normalized even when it's locked ![image](/attachments/45f41d42-588a-4f2f-bd7c-88578575082c)
Daniel Salazar added the
Severity
Normal
Type
Report
Status
Needs Triage
labels 2023-05-14 03:30:08 +02:00
Colin Basnett was assigned by Iliya Katushenock 2023-05-14 11:12:38 +02:00
Colin Basnett was unassigned by Iliya Katushenock 2023-05-14 11:13:03 +02:00
Member

What is the expected behavior here? Should the entire operation be blocked if any vertex groups are locked?

What is the expected behavior here? Should the entire operation be blocked if any vertex groups are locked?

The problem seems to be that you shouldn't change the other vertex groups, just the active ones?

The problem seems to be that you shouldn't change the other vertex groups, just the active ones?
Author
Member

What is the expected behavior here? Should the entire operation be blocked if any vertex groups are locked?

That is correct. When a vgroup's values can not be changed due to normalization locking in other vgroups, the values simply don't change no matter how you try to paint them. Except the broken gradient 😌

> What is the expected behavior here? Should the entire operation be blocked if any vertex groups are locked? That is correct. When a vgroup's values can not be changed due to normalization locking in other vgroups, the values simply don't change no matter how you try to paint them. Except the broken gradient 😌
Member

I believe this is the same thing #107918 , overall lack of checking for locked groups. Likely due to attribute system change.

I believe this is the same thing #107918 , overall lack of checking for locked groups. Likely due to attribute system change.
Member

Will look into this

Will look into this
Philipp Oeser self-assigned this 2023-10-17 12:57:19 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-20 14:15:01 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107920
No description provided.